test/org/midica/testfiles/failing/pattern-magic-cond-idx-too-high.midica
INCLUDE inc/instruments.midica

0:  c/d:pat_a

PATTERN pat_a
	{ if $NC == 2
		2 /4
	}
END

